# DSM

./: CMakeLists.txt  README.md  config.h  custom.h  graphoperations.h  graphsoperations.cpp  main.cpp  matching.cpp  matching.h  utils.h
Codes/: custom.h  globals.cpp  globals.h  graph.cpp  graph.h  graphflow.cpp  graphflow.h  graphoperations.h  main.cpp  types.h
Datasets/: zipf.txt
Datasets/DBLP/: deletion_graph.graph  insertion_graph.graph
Datasets/DBLP/query_graphs/: query_graph-0.graph  query_graph-1.graph  query_graph-10.graph  query_graph-11.graph  query_graph-12.graph  query_graph-13.graph  query_graph-14.graph  query_graph-15.graph  query_graph-16.graph  query_graph-17.graph  query_graph-18.graph  query_graph-19.graph  query_graph-2.graph  query_graph-20.graph  query_graph-21.graph  query_graph-22.graph  query_graph-23.graph  query_graph-24.graph  query_graph-25.graph  query_graph-26.graph  query_graph-27.graph  query_graph-28.graph  query_graph-29.graph  query_graph-3.graph  query_graph-30.graph  query_graph-31.graph  query_graph-32.graph  query_graph-33.graph  query_graph-34.graph  query_graph-35.graph  query_graph-36.graph  (+69 more)
Datasets/HPRD/: data_graph.graph  deletion_graph.graph  initial_graph.graph  insertion_graph.graph
Datasets/Syn-Gau/: data_graph.graph  initial_graph.graph
Datasets/Syn-Uni/: data_graph.graph  deletion_graph.graph  initial_graph.graph  insertion_graph.graph
Datasets/Syn-Zipf/: data_graph.graph  initial_graph.graph
Datasets/Yeast/: data_graph.graph  deletion_graph.graph  initial_graph.graph  insertion_graph.graph
(+699 files in other folders)
